use java22 for github actions

--- a/.github/workflows/sonqrqube.yml
+++ b/.github/workflows/sonqrqube.yml
@@ -22,7 +22,7 @@ jobs:
       uses: actions/setup-java@v3
       with:
         distribution: 'temurin'
-        java-version: '17' # Use the appropriate version for your project
+        java-version: '22'
 
     # Cache Maven dependencies
     - name: Cache Maven packages
