--- a/.github/workflows/sonqrqube.yml
+++ b/.github/workflows/sonqrqube.yml
@@ -9,7 +9,7 @@ on:
       - main
 
 jobs:
-  build-and-scan:
+  build:
     runs-on: ubuntu-latest
 
     steps:
@@ -37,19 +37,33 @@ jobs:
     - name: Build with Maven
       run: mvn clean verify
 
-    # SonarQube scan
-    - name: SonarCloud Scan
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        SONARCLOUD_TOKEN: ${{ secrets.SONARCLOUD_TOKEN }}
-        SONARCLOUD_ORG: 'pchmielecki87'
-        SONARCLOUD_PROJECT_KEY: 'java_cicd_sonarqube_githubactions'
-      run: |
-        mvn -X sonar:sonar \
-        -Dsonar.host.url=https://sonarcloud.io \
-        -Dsonar.organization=${SONARCLOUD_ORG} \
-        -Dsonar.projectKey=${SONARCLOUD_PROJECT_KEY} \
-        -Dsonar.login=${SONARCLOUD_TOKEN} \
-        -Dsonar.java.binaries=target/classes \
-        -Dsonar.scm.provider=git \
-        -Dsonar.qualitygate.wait=true
+  sonarqube:
+    name: SonarQube
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+      - name: SonarQube Scan
+        uses: SonarSource/sonarqube-scan-action@v5
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+
+
+
+    # # SonarQube scan
+    # - name: SonarCloud Scan
+    #   env:
+    #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    #     SONARCLOUD_TOKEN: ${{ secrets.SONARCLOUD_TOKEN }}
+    #     SONARCLOUD_ORG: 'pchmielecki87'
+    #     SONARCLOUD_PROJECT_KEY: 'java_cicd_sonarqube_githubactions'
+    #   run: |
+    #     mvn -X sonar:sonar \
+    #     -Dsonar.host.url=https://sonarcloud.io \
+    #     -Dsonar.organization=${SONARCLOUD_ORG} \
+    #     -Dsonar.projectKey=${SONARCLOUD_PROJECT_KEY} \
+    #     -Dsonar.login=${SONARCLOUD_TOKEN} \
+    #     -Dsonar.java.binaries=target/classes \
+    #     -Dsonar.scm.provider=git \
+    #     -Dsonar.qualitygate.wait=true
