--- a/.github/workflows/sonqrqube.yml
+++ b/.github/workflows/sonqrqube.yml
@@ -47,8 +47,7 @@ jobs:
       - name: SonarQube Scan
         uses: SonarSource/sonarqube-scan-action@v5
         env:
-          SONAR_TOKEN: ${{ secrets.SONARCLOUD_TOKEN }}
-
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
 
     # # SonarQube scan
