--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,6 @@
 sonar.projectKey=java_cicd_sonarqube_githubactions
 sonar.organization=pchmielecki87
+sonar.token=ed81741205532521b2e0de3ecc5a6c86964a698b
 
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=Java_CICD
