--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,8 @@
 	<description>Spring Boot Project</description>
 	<properties>
 		<java.version>22</java.version>
+		<sonar.organization>pchmielecki87</sonar.organization>
+		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 	</properties>
 	<dependencies>
 		<dependency>
