--- a/.github/workflows/sonqrqube.yml
+++ b/.github/workflows/sonqrqube.yml
@@ -20,6 +20,7 @@ jobs:
         uses: actions/setup-java@v4
         with:
           java-version: 22
+          distribution: 'zulu' # Alternative distribution options are available.
       - name: Cache SonarQube packages
         uses: actions/cache@v4
         with:
